# algo

./: Cargo.toml  main.rs  sr.sh
ABC/: mktemp.sh
ABC/ABC426/A/: main.rs
OTHER/ABS/A/: main.rs
OTHER/ABS/B/: main.rs
OTHER/ABS/C/: main.rs
OTHER/ABS/D/: main.rs
OTHER/ABS/E/: main.rs
OTHER/ABS/F/: main.rs
OTHER/ABS/G/: main.rs
src/: main.rs
